ghost/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ghost
  name: ghost
  namespace: ghost
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: ghost
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ghost
    spec:
      automountServiceAccountToken: false
      containers:
      - env:
        - name: url
          value: "https://example.com"
        - name: mail__transport
          value: SMTP
        - name: mail__from
          valueFrom:
            secretKeyRef:
              key: from
              name: ghost-mail-secret 
        - name: mail__options__host
          valueFrom:
            secretKeyRef:
              key: host
              name: ghost-mail-secret 
        - name: mail__options__port
          valueFrom:
            secretKeyRef:
              key: port
              name: ghost-mail-secret 
        - name: mail__options__auth__user
          valueFrom:
            secretKeyRef:
              key: username
              name: ghost-mail-secret 
        - name: mail__options__auth__pass
          valueFrom:
            secretKeyRef:
              key: password
              name: ghost-mail-secret 
        - name: useMinFiles
          value: "true"
        - name: privacy__useUpdateCheck
          value: "true"
        - name: privacy__useGravatar
          value: "false"
        - name: privacy__useRpcPing
          value: "false"
        - name: privacy__useStructuredData
          value: "false"
        image: ghost:4-alpine
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /ghost
            port: 2368
            scheme: HTTP
          initialDelaySeconds: 60
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 5
        name: ghost
        ports:
        - containerPort: 2368
          name: ghost
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ghost
            port: 2368
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 2
        resources:
          limits:
            cpu: 500m
            memory: 512M
          requests:
            cpu: 50m
            memory: 128M
        securityContext:
          runAsUser: 65534
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: content
          subPath: content
      dnsPolicy: ClusterFirst
      nodeSelector:
         kubernetes.io/hostname: k8s-worker
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsUser: 65534
      terminationGracePeriodSeconds: 60
      volumes:
      - name: content
        persistentVolumeClaim:
          claimName: ghost
