ghost/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: ghost
  name: ghost
  namespace: ghost
spec:
  ports:
  - name: http
    port: 2368
    protocol: TCP
    targetPort: 2368
  selector:
    app.kubernetes.io/name: ghost
